# Fast_API

./: .coverage  asgi.py  main.py  pyproject.toml  scratch_01.py  test.ps1  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py
app/dtos/: create_meeting_response.py  frozen_config.py
app/utils/: base62.py  squids.py
